video overlap fixed. submitting this copy.

--- a/blocks/content/video/__iframes/video__iframes.css
+++ b/blocks/content/video/__iframes/video__iframes.css
@@ -7,9 +7,3 @@
   display: flex;
  
 }
-  .video__iframes:first-child {
-  margin-right: 20px;
- 
-  
-  
-}
